Attempts to fix text being cut off on mobile devices
[#156653157]

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -60,7 +60,7 @@
 @media (orientation: portrait) {
     .home__darby {
         background-size: cover;
-        height: 60vh;
+        height: 55vh;
         width: 100vw;
     }
 
